--- a/FP_Phase2/FP_Phase2.csproj
+++ b/FP_Phase2/FP_Phase2.csproj
@@ -354,6 +354,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BudgetItemsController.cs" />
     <Compile Include="Models\ApiContext.cs" />
     <Compile Include="Controllers\BankAccountsController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
