added more stored procs and fixed views

--- a/FP_Phase2/FP_Phase2.csproj
+++ b/FP_Phase2/FP_Phase2.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BudgetItemsController.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApiContext.cs" />
     <Compile Include="Controllers\BankAccountsController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -373,8 +374,6 @@
     <Compile Include="Models\BankAccount.cs" />
     <Compile Include="Models\Budget.cs" />
     <Compile Include="Models\BudgetItem.cs" />
-    <Compile Include="Models\ChartData.cs" />
-    <Compile Include="Models\EmailModel.cs" />
     <Compile Include="Models\Household.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Invitation.cs" />
@@ -420,6 +419,7 @@
     <None Include="Properties\PublishProfiles\FinancialPortalAPI - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <EmbeddedResource Include="Scripts\customSwagger.js" />
+    <Content Include="Images\tiefighter.png" />
     <Content Include="Images\xwing.png" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -448,9 +448,13 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <None Include="Web.FinancialPortalAPI - Web Deploy.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="bin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
